test_programs/grammer.txt
program: definitions

definitions: 
        | struct_def definitions
        | function_def definitions
        | struct_def
        | function_def
        
struct_def: 
        | 'struct' identifier '{' struct_fields '}'

function_def: 
        | 'fn' identifier '(' parameters ')' ':' type_annotation '{' statement_list '}'

struct_fields: 
        | identifier ':' type_annotation ';' struct_fields
        | identifier ':' type_annotation
        | empty

type_annotation: 
        | identifier
        | '[' identifier ']' // array type
        
parameters: 
        | identifier ':' type_annotation ',' parameters
        | identifier ':' type_annotation
        | empty

array_access: 
        | identifier '[' expression ']'
        
simple_l_value:
        | identifier
        | array_access

l_value : 
        | simple_l_value '.' l_value
        | simple_l_value

statement_list: 
        | statement statement_list
        | statement
        | empty

statement: 
        | assignment_stmt
        | var_decl_stmt
        | return_statement
        | if_statement
        | while_statement
        | expr ';'

assignment_stmt : 
        | l_value '=' expr ';'

var_decl_stmt: 
        | 'let' identifier : type_annotation ';'
        | 'let' identifier : type_annotation '=' expr ';'

while_statement: 
        | 'while' expr '{' statement_list '}'

if_statement: 
        | 'if' expr '{' statement_list '}'
        | 'if' expr '{' statement_list '} else '{' statement_list '}'
        | 'if' expr '{' statement_list '} else if_statement

return_statement: 'return' expr ';'

function_call: 
        | identifier '(' argument_list ')

argument_list:
        | expr ',' argument_list
        | expr

struct_field_initialization:
        | identifier '=' expr ',' struct_field_initialization
        | identifier '=' expr

struct_initialization:
        | identifier '{' struct_field_initialize  '}' ';'

expr_list:
        | expr ',' expr_list
        | expr

array_initialization:
        | '[' expr_list ']'

expr : 
        | expr '+' expr
        | expr '-' expr
        | expr '*' expr
        | expr '/' expr
        | expr '%' expr
        | expr '<' expr
        | expr '>' expr
        | expr '<=' expr
        | expr '>=' expr
        | expr '!=' expr
        | expr '==' expr
        | expr '&&' expr
        | expr '||' expr
        | l_value
        | function_call        
        | integer_constant
        | string_constant
        | 'true'
        | 'false'
        | struct_initialization
        | array_initialization
